# recoflow

./: .gitignore  LICENSE  README.md  book.md  build.md  library.md  pyproject.toml  roadmap.md
data/: movielens.py
docs/: _config.yaml  index.html  index.js  index.md  mf.js  package-lock.json  package.json  pca.js
docs/_includes/: footer.html  header.html  styles.css
docs/_layouts/: base.html  basic.html
docs/_pages/: intro.md  mf.md
docs/recoflowjs/: data.js  inspect.js  model.js  preprocess.js  vis.js
docs/sample/: items.csv  ratings.csv  ratingsU.csv  ratingsU.json  users.csv
docs/web_modules/: import-map.json  vega-embed.js  vega-lite.js  vega.js
docs/web_modules/common/: index-16a640fb.js  index-e6ff2a70.js  index-f6e52e06.js
python/: README.md  pyproject.toml
python/recoflow/: __init__.py  datasets.py  encoder.py  metrics.py  preprocessing.py  recommend.py  utils.py
python/tests/: test_recoflow.py
recoflow/: __init__.py  datasets.py  metrics.py  models.py  preprocessing.py  recommend.py  vis.py
tests/: test_recoflow.py
