[tool.poetry]
name = "recoflow"
version = "0.0.7"
description = "Deep Recommender System for Humans"
license = "MIT"
readme = "README.md"
repository = "https://github.com/amitkaps/recoflow"
authors = [
  "Amit Kapoor <amitkaps@gmail.com>", 
  "Bargava Subramanian <bargava@gmail.com>"
  ]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18"
scikit-learn = "^0.23"
pandas = "^1.1"
altair = "^4.1"
requests = "^2.24"
matplotlib = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
tensorflow = "^2.3"
jupyterlab = "^2.2"
pyarrow ="^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
